# eLibrary-C2020

./: .gitignore  CMakeLists.txt  README.md  eLibrary.sln  eLibrary.vcxproj  eLibrary.vcxproj.filters
Demo/: book.db  borrowrecord.db  user.db
Document/: cover.doc  report.md
Source/libgraphics/: exceptio.c  exception.h  extgraph.h  gcalloc.h  genlib.c  genlib.h  graphics.c  graphics.h  random.c  random.h  simpio.c  simpio.h  strlib.c  strlib.h
Source/model/: basictype.h  list.c  list.h  model.c  model.h  utils.c  utils.h
Source/simpleGUI/: imgui.c  imgui.h
Source/template/: gui.h  page.c  page.h  ui.c  ui.h
Source/view/: hash.c  hash.h  history.c  history.h  main.c  utility.c  utility.h  view.c  view.h
